--- a/tsconfig.web.json
+++ b/tsconfig.web.json
@@ -5,7 +5,7 @@
     "src/renderer/src/**/*",
     "src/renderer/src/**/*.tsx",
     "src/preload/*.d.ts"
-  ],
+, "src/main/database.ts", "src/shared/*.ts"  ],
   "compilerOptions": {
     "composite": true,
     "jsx": "react-jsx",
@@ -13,6 +13,9 @@
     "paths": {
       "@renderer/*": [
         "src/renderer/src/*"
+      ],
+      "@shared/*": [
+        "src/shared/*"
       ]
     }
   }
