--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "dependencies": {
     "@electron-toolkit/preload": "^3.0.0",
     "@electron-toolkit/utils": "^3.0.0",
+    "idb": "^8.0.0",
     "knex": "^3.1.0",
     "sass": "^1.71.1",
     "sqlite3": "^5.1.7"
